micro-app-clean-master/k8s/expiration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: hammamioumayma/expiration:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-srv
spec:
  selector:
    app: expiration
  ports:
  - port: 3000
    targetPort: 3000
