micro-app-clean-master/k8s/tickets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: hammamioumayma/tickets:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
  - port: 3000
    targetPort: 3000
