micro-app-clean-master/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: micro-app.local
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: orders-srv
            port:
              number: 3000
      - path: /api/payments
        pathType: Prefix
        backend:
          service:
            name: payments-srv
            port:
              number: 3000
      - path: /api/tickets
        pathType: Prefix
        backend:
          service:
            name: tickets-srv
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 3000
